# VSR-Env

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  QUICKSTART.md  README.md  REWARDS.md  STRATEGIES.md  TASKS.md  TESTING_GUIDE.md  implementation_plan.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  sample_inference.py  task.md  test_client.py  test_local.sh  test_ws.py  walkthrough.md
.github/workflows/: ci.yml
.kiro/specs/vsr-env-hackathon/: .config.kiro  design.md  requirements.md  tasks.md
docs/: ARCHITECTURE.md  GRADING.md
server/: app.py
tests/: __init__.py  test_environment.py  test_multi_leg_strategies.py  test_reward_computer.py  test_task_handlers.py
vsr_env/: __init__.py  client.py  models.py
vsr_env/engine/: __init__.py  market_sim.py  option_chain.py  portfolio.py
vsr_env/reward/: __init__.py  reward_computer.py  rubrics.py
vsr_env/server/: __init__.py  app.py  index.html  telemetry.py  vsr_environment.py
vsr_env/strategies/: __init__.py  base.py  spread.py  straddle.py  strangle.py
vsr_env/tasks/: __init__.py  arb_capture.py  delta_hedging.py  earnings_vol_crush.py  gamma_scalping.py  iv_reading.py  straddle_trading.py  vega_gamma_stress.py  vertical_spread.py  vol_regime_detection.py
