[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsr-env"
version = "1.0.0"
description = "Volatility Surface Reasoning Environment for options portfolio management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "VSR-Env Team"}
]
keywords = ["reinforcement-learning", "options", "trading", "openenv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vsr_env*"]

[project.scripts]
server = "vsr_env.server.app:main"